# langchain_guide

./: .gitignore  README.md  pyproject.toml  requirement.txt
langchain/: 01.base.ipynb  03.length_selector.ipynb  06.runnable_bind_tools.ipynb  07.document_loader.ipynb  09.runnable_lambda.ipynb  10.runnable_parallel.ipynb  11.split_document.ipynb  12.simple_conversation.ipynb  13.retriever_fusion.ipynb  14.context_compression.ipynb  15-1.selfquery_process_coding.ipynb  15.selfquery.ipynb  16.time_weight.ipynb  17.document_parent.ipynb  18.multi_vector.ipynb  19.indexing.ipynb  2.role_player.ipynb  20.memory.ipynb  21.runnable_passthrough.ipynb  22.runnable_sequence.ipynb  23.agent.ipynb  3.length_selector.ipynb  4.output_parser_json.ipynb  5.output_parser_xml.ipynb  6.runnable_bind_tools.ipynb  7.document_loader_from_arxiv.ipynb  8.extract_information_from_arxiv.ipynb  chat_model_client.py  llm_client.py
