[project]
name = "langchain-guide"
version = "0.1.0"
description = ""
authors = [
    {name = "geekmaxi",email = "s.showling@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "langchain-chroma (>=0.2.1,<0.3.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-core (>=0.3.33,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "langsmith (>=0.3.5,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
